tests/ui/input/attr_on_field.stderr
error: #[funcmap] helper attribute is not supported for fields
 --> tests/ui/input/attr_on_field.rs:4:16
  |
4 | struct Test<T>(#[funcmap] T);
  |                ^^^^^^^^^^
